[tool.poetry]
name = "roche-cipher"
version = "0.1.0"
description = ""
authors = ["Jiri Raja <jiri.raja@gmail.com>"]
readme = "README.md"
packages = [{include = "roche_cipher"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
